# Bit-Twiddling

./: .gitignore  BitTwiddling.hpp  BitTwiddling.sln  BitTwiddling.vcxproj  BitTwiddling.vcxproj.filters  LICENSE  README.md  find_mul_and_mul_to_permute_bits.py  k_out_of_n_bits.hpp  k_out_of_n_bits_test.cpp  k_out_of_n_bits_test.h  main.cpp  parallel_for_items.hpp  semi_exhaustive_search_for_8bit_rev.cpp  semi_exhaustive_search_for_8bit_rev.h  semi_exhaustive_search_for_8bit_rev.hpp
CUDA/: BitTwiddling.cpp  BitTwiddling.cu  BitTwiddling.h  CMakeLists.txt  cuda_and_host.h  cuda_device_time.cu  cuda_device_time.h  cuda_math.h  main.cpp  main.h
